Changelog
=========

4.1.5 (unreleased)
------------------

- Nothing changed yet.


4.1.4 (2016-02-17)
------------------

- Language selector: add form variables
  only when method is GET
  [gotcha]

- Fix handling of deleted or renamed "default page" items.
  [witsch]

- Add uninstall profile.
  [thet]

- Fixed permission for manage_translations_form, anonymous can't access the page 
  anymore.
  [prospchr]

- getTypeInfo : defer computation of isCanonical
  [gotcha]

- Fix tests
  [jfroche]

- Set default field value if nothing is given in mutator value
  [jfroche]

- Add Travis buildout
  [jfroche]


4.1.3 (2013-01-18)
------------------

- Fix regression from the plone site root change. When accessing the zope
  root using the ZMI getSite returns empty, so fall back to traversing.
  [pjstevns]

- Add a better way in getting plone site root. A change in Archetypes setting
  the creation date by a subscriber breaks the old way, because traversing
  wasn't avaliable in such an early state.
  [hoka]

- Add a viewlet to mark the translated content as suggested by Google at
  http://googlewebmastercentral.blogspot.com.es/2011/12/new-markup-for-multilingual-content.html
  [erral]

- Update bootstrap.py for zc.buildout 1.5.0.
  [pjstevns]

- Deal with broken translations, esp. when the content's language doesn't
  match the parent's language.
  [pjstevns]

- Fixed getting deletable languages if a language has been disabled and content
  has been translated in this language.
  [kroman0]

- Added option to disable left portlets in translation view.
  [pingviini]

- Fixed translation view to actually hide portlets when configured to do so.
  [pingviini]

- Display the translation of the folder default page in the current language
  if available.
  [pjstevns]

- Check if the forward transition exists before taking it
  [giacomos]

- Fixed preview of "renderable" fields that are not simply text/html (like
  text/x-rst).
  [keul]
